--- a/src/main/resources/templates/pet/editPet.html
+++ b/src/main/resources/templates/pet/editPet.html
@@ -7,7 +7,7 @@
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
 </head>
 <body>
-<div id="memberData" th:attr="data-member-id=${session.member.id}"></div>
+<div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
@@ -72,7 +72,7 @@
 
         <!-- 등록된 반려견이 있을 경우 -->
         <div th:if="${pets != null && !pets.isEmpty()}" th:each="pet, iterStat : ${pets}" class="pet-section border p-3 mb-3">
-            <h5>반려견 [[${iterStat.index + 1}]]</h5>
+            <h5>반려견 [[${iterStat.index + 1}]] 정보</h5>
             <input type="hidden" name="pets[${iterStat.index}].id" th:value="${pet.id}">
 
             <div class="form-group">
@@ -101,9 +101,9 @@
     </form>
 </div>
 
-<script src="/js/pet/editpet.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/js/pet/pet.js"></script>
 </body>
 </html>
