--- a/src/main/resources/templates/member/myPage.html
+++ b/src/main/resources/templates/member/myPage.html
@@ -9,6 +9,8 @@
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
 </head>
 <body>
+<!-- data-member-id 설정 -->
+<div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -171,11 +173,15 @@
             </div>
         </div>
     </div>
+    <div class="text-center mt-4">
+        <button id="deleteMemberBtn" class="btn btn-danger btn-sm">회원 탈퇴</button>
+    </div>
 </div>
 
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  <!-- Full 버전 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>  <!-- Popper.js -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  <!-- Bootstrap JS -->
+<script src="/js/member/member.js"></script>
 </body>
 </html>
