--- a/src/main/resources/templates/pet/newPet.html
+++ b/src/main/resources/templates/pet/newPet.html
@@ -7,7 +7,7 @@
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
 </head>
 <body>
-<div id="memberData" th:attr="data-member-id=${session.member.id}"></div>
+<div id="memberData" th:data-member-id="${session.member?.id}"></div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="/pets-care/main">🐶 반려견 돌봄</a>
@@ -102,6 +102,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="/js/pet/addpet.js"></script>
+<script src="/js/pet/pet.js"></script>
 </body>
 </html>
