--- a/src/main/resources/templates/careavailabledate/new-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/new-care-available-date.html
@@ -4,7 +4,7 @@
     <title>돌봄 가능 날짜 목록 - 반려견 돌봄 서비스</title>
     <!-- 공통 CSS (mainStyle.css), 페이지 전용 CSS, 및 Bootstrap CSS -->
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
-    <link th:href="@{/css/careAvailableDates.css}" rel="stylesheet">
+    <link th:href="@{/css/careAvailableDateStyle.css}" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
