--- a/src/main/resources/static/css/pagination.css
+++ b/src/main/resources/static/css/pagination.css
@@ -1,5 +1,3 @@
-/* pagination.css */
-
 .pagination {
     display: flex;
     justify-content: center;
@@ -13,6 +11,7 @@
 .page-link {
     border-radius: 0.25rem;
     padding: 0.5rem 1rem;
+    border: 1px solid #ddd; /* 기본 테두리 색상 */
 }
 
 .page-link:hover {
@@ -20,7 +19,18 @@
     color: white; /* 텍스트 색상 */
 }
 
+/* 활성화된 페이지 번호에 색상 추가 */
 .page-item.active .page-link {
-    background-color: #007bff; /* 현재 페이지 활성화 */
-    color: white;
+    background-color: #007bff !important;
+    border-color: #007bff !important;
+    color: white !important;
 }
+
+/* 활성화된 페이지 번호에 마우스 오버 시 색상 변경 */
+.page-item.active .page-link:hover {
+    background-color: #0056b3 !important;
+    border-color: #0056b3 !important;
+}
+
+
+
