--- a/src/main/resources/templates/careavailabledate/care-available-date-detail.html
+++ b/src/main/resources/templates/careavailabledate/care-available-date-detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>돌봄 가능 날짜 목록 - 반려견 돌봄 서비스</title>
+    <title>돌봄 가능 날짜 상세 조회 - 반려견 돌봄 서비스</title>
     <!-- 공통 CSS (mainStyle.css), 페이지 전용 CSS, 및 Bootstrap CSS -->
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/careAvailableDateStyle.css}" rel="stylesheet">
@@ -24,7 +24,7 @@
                     <a class="nav-link" th:href="@{/pets-care/pet-sitter/information}">펫시터 서비스</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/pets-care/reservableList}">훈련사 프로필</a>
+                    <a class="nav-link" th:href="@{/pets-care/reservable-list?page=0&size=9}">훈련사 프로필</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/pets-care/reviews}">이용 후기</a>
@@ -99,8 +99,8 @@
 </div>
 
 <!-- Bootstrap JS, Popper.js, jQuery -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/careavailabledate/care-available-date.js"></script>
