--- a/src/main/resources/templates/careavailabledate/new-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/new-care-available-date.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" th:href="@{/pets-care/pet-sitter/information}">펫시터 서비스</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/pets-care/reservableList}">훈련사 프로필</a>
+                    <a class="nav-link" th:href="@{/pets-care/reservable-list?page=0&size=9}">훈련사 프로필</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/pets-care/reviews}">이용 후기</a>
@@ -97,7 +97,7 @@
 </div>
 
 <!-- Bootstrap 및 관련 플러그인 -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
