--- a/src/main/resources/templates/member/edit-member.html
+++ b/src/main/resources/templates/member/edit-member.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" th:href="@{/pets-care/pet-sitter/information}">펫시터 서비스</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/pets-care/reservableList}">훈련사 프로필</a>
+                    <a class="nav-link" th:href="@{/pets-care/reservable-list?page=0&size=9}">훈련사 프로필</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/pets-care/reviews}">이용 후기</a>
@@ -77,22 +77,22 @@
         <input type="hidden" name="_method" value="PUT">  <!-- 이 부분을 추가 -->
         <div class="form-group">
             <label for="password">비밀번호</label>
-            <input type="password" id="password" name="password" class="form-control" required minlength="8" maxlength="20">
+            <input type="password" id="password" name="password" class="form-control" minlength="8" maxlength="20">
         </div>
 
         <div class="form-group">
             <label for="name">이름</label>
-            <input type="text" id="name" name="name" class="form-control" th:value="${member.name}" required>
+            <input type="text" id="name" name="name" class="form-control" th:value="${member.name}">
         </div>
 
         <div class="form-group">
             <label for="nickName">닉네임</label>
-            <input type="text" id="nickName" name="nickName" class="form-control" th:value="${member.nickName}" required minlength="2" maxlength="8">
+            <input type="text" id="nickName" name="nickName" class="form-control" th:value="${member.nickName}">
         </div>
 
         <div class="form-group">
             <label for="email">이메일</label>
-            <input type="email" id="email" name="email" class="form-control" th:value="${member.email}" required>
+            <input type="email" id="email" name="email" class="form-control" th:value="${member.email}">
         </div>
 
         <div class="form-group">
@@ -102,12 +102,12 @@
 
         <div class="form-group">
             <label for="zipcode">우편번호</label>
-            <input type="text" id="zipcode" name="zipcode" class="form-control" th:value="${member.zipcode}" required minlength="5" maxlength="5">
+            <input type="text" id="zipcode" name="zipcode" class="form-control" th:value="${member.zipcode}">
         </div>
 
         <div class="form-group">
             <label for="address">상세 주소</label>
-            <input type="text" id="address" name="address" class="form-control" th:value="${member.address}" required>
+            <input type="text" id="address" name="address" class="form-control" th:value="${member.address}">
         </div>
 
         <div class="form-group">
@@ -125,6 +125,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  <!-- Full 버전 -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>  <!-- Popper.js -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>  <!-- Bootstrap JS -->
 <script src="/js/member/member.js"></script>
