-new care-available-date page(돌봄사 -> 돌봄 가능 날짜)

--- a/src/main/resources/templates/careavailabledate/new-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/new-care-available-date.html
@@ -91,6 +91,8 @@
                     <div id="price-error" class="error-message" style="color:red; display:none;"></div> <!-- 오류 메시지 표시 위치 -->
                 </div>
                 <button type="submit" class="btn btn-primary">등록</button>
+                <!-- 돌아가기 버튼 -->
+                <a href="javascript:history.back()" class="btn btn-secondary ml-2">돌아가기</a> <!-- ml-2를 추가해 간격을 조정 -->
             </form>
         </div>
     </div>
