--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -43,15 +43,14 @@
                                 등록한 돌봄 가능 일정
                             </a>
 
-                            <a class="dropdown-item"
-                               th:href="|/pets-care/members/${session.member.id}/schedules|">
+                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/schedules?page=0&size=10(sitterId=${session.member.id})}">
                                 나의 돌봄 일정
                             </a>
                         </div>
 
                         <!-- CUSTOMER인 경우 -->
                         <a class="dropdown-item" th:if="${session.member.role.name() == 'CUSTOMER'}"
-                           th:href="@{/pets-care/members/{customerId}/reservations(customerId=${session.member.id})}">
+                           th:href="@{/pets-care/members/{customerId}/reservations?page=0&size=10(customerId=${session.member.id})}">
                             나의 예약 현황
                         </a>
 
