-MainStyle CSS(메인 페이지)

--- a/src/main/resources/static/css/mainStyle.css
+++ b/src/main/resources/static/css/mainStyle.css
@@ -204,3 +204,14 @@ footer {
     color: red;
     font-size: 12px;
 }
+
+.comment-ellipsis {
+    display: block;
+    max-width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
+    margin: 0 auto;
+}
+
