-Main page(메인 페이지)

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div><br>
-        <a th:href="@{/reviews}" class="btn btn-secondary">후기 더보기</a>
+        <a th:href="@{/pets-care/reviews}" class="btn btn-secondary">후기 더보기</a>
     </section>
 </div>
 
